--- a/UnionTypes.csproj
+++ b/UnionTypes.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Src\Result.cs" />
     <Compile Include="Src\Tests\TestMaybe.cs" />
+    <Compile Include="Src\Tests\TestResult.cs" />
     <Compile Include="Src\Union3.cs" />
   </ItemGroup>
   <ItemGroup>
