--- a/UnionTypes.csproj
+++ b/UnionTypes.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UnionTypes</RootNamespace>
     <AssemblyName>UnionTypes</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -59,6 +60,7 @@
     <Compile Include="Src\Result.cs" />
     <Compile Include="Src\Tests\TestMaybe.cs" />
     <Compile Include="Src\Tests\TestResult.cs" />
+    <Compile Include="Src\Tests\TestUnion3.cs" />
     <Compile Include="Src\Union3.cs" />
   </ItemGroup>
   <ItemGroup>
